adding methods of extracting the payment history